# AutoQuick

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
assets/qml/: main.qml
src/: Arguments.cpp  Arguments.h  CMakeLists.txt  Config.cpp  Config.h  DataManager.cpp  DataManager.h  NetworkDrive.cpp  NetworkDrive.h  QuickAccess.cpp  QuickAccess.h  TimeTable.cpp  TimeTable.h  main.cpp
src/core/: Arguments.cpp  Arguments.h  CMakeLists.txt  DataManager.h  QuickAccess.cpp
src/net/: CMakeLists.txt
src/ui/: CMakeLists.txt
src/utils/: CMakeLists.txt
